@@ -3,6 +3,8 @@
 
 *** Changes since GDB 9
 
+* GDB will now display a helpful tip when starting up.
+
 * Help and apropos commands will now show the documentation of a
   command only once, even if that command has one or more aliases.
   These commands now show the command name, then all of its aliases,
